# media-platform-starter-fresh

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  FIRST-RUN-CHECKLIST.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.example.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  policy-check.yml
apps/catalog-api/: Dockerfile  README.md  config.sample.yaml  pyproject.toml
config/: media-domains.yaml  storage-layout.yaml
config/policies/: arr-locks.yaml  audio.yaml  subtitles.yaml  transcode.yaml
docs/: 000-architecture-overview.md  001-media-brain-step1.md  010-repo-strategy.md  020-vscode-claude-setup.md  030-branch-and-pr-strategy.md  040-how-to-use-this-starter.md  media-brain-step1-spec-complete.md  media-brain-step1.md  media-brain-step2.md  media-brain-step3.md
infra/unraid/: README.md
prompts/: 01-bootstrap-platform.md
schemas/: README.md
scripts/: validate_config.py
services/: README.md
services/jav-normalizer/: Dockerfile  README.md  config.sample.yaml  pyproject.toml
services/media-brain/: README.md  pyproject.toml
services/media-brain/config/: media-brain.sample.yaml
services/media-brain/media_brain/: hasher.py  main.py  models.py  scanner.py  store.py
services/media-brain/tests/: conftest.py  test_routes.py  test_scanner.py  test_store.py
services/media-policy-engine/: Dockerfile  README.md  config.sample.yaml  pyproject.toml
services/media_brain/: __init__.py  job_store.py  step1_inventory.py  step1_scan_endpoint.py  step2_subtitle_language.py  step3_subtitle_policy.py  step4_audio_extraction.py  step4_dispatch.py
services/subtitle-intel/: Dockerfile  README.md  config.sample.yaml  pyproject.toml
services/subtitle-intel/subtitle_intel/: main.py  models.py  scanner.py
services/subtitle-intel/tests/: conftest.py  test_models.py  test_routes.py  test_scanner.py
services/subtitle-intel/tests/fixtures/: mediainfo_anime.json  mediainfo_domestic.json  mediainfo_no_lang_tag.json  mediainfo_no_subtitles.json
tests/: README.md  conftest.py  test_config_files.py  test_media_brain_step1_inventory.py  test_media_brain_step1_scan_endpoint.py  test_media_brain_step2_subtitle_language.py  test_media_brain_step3_subtitle_policy.py  test_media_brain_step4_audio_extraction.py  test_media_brain_step4_dispatch.py  test_policy_files.py
workers/: README.md
workers/subtitle-worker/: Dockerfile  README.md  config.sample.yaml  pyproject.toml
workers/subtitle-worker/subtitle_worker/: __main__.py  main.py  models.py  worker.py
workers/subtitle-worker/tests/: test_routes.py  test_subtitle_worker.py
workflows/: README.md
(+54 files in other folders)
